--- a/app/src/main/res/layout/camera_view.xml
+++ b/app/src/main/res/layout/camera_view.xml
@@ -5,7 +5,7 @@
 
 
     <androidx.camera.view.PreviewView
-        android:id="@+id/viewFinder"
+        android:id="@+id/camera_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
