--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:src="@drawable/ic_rotate"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="40dp"
+        android:background="@color/colorPrimary"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
